[tool.poetry]
name = "pqai-index"
version = "0.1.0"
description = "Service for creating, managing, and searching through vector indexes"
authors = ["Mahesh Maan <mahesh.maan@greyb.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pqai_index"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
annoy = "1.17.0"
faiss-cpu = "1.7.1"
numpy = "1.19.5"
psutil = "5.9.0"
python-dotenv = "0.21.0"
uvicorn = "0.17.6"
httpx = "^0.24.1"
jsonschema = "^4.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
